--- a/gb/25/1/19/n14416866.md
+++ b/gb/25/1/19/n14416866.md
@@ -15,7 +15,7 @@
 <p>川普誓言推动具变革性的“美国优先”政策，他的施政方向将牵动全球政治和经济格局。周一的重点集中在总统就职演讲，以及上任首日签署的行政令上。</p>
 <p>周日（1月19日），川普表示，作为总统，他将在本周末首次出访，前往加州视察洛杉矶山火灾造成的损失。</p>
 <p>“我想向所有受加州山火影响的人表达我们的关怀。”川普说，“我将于周五去那里看一看，让它恢复正常。”</p>
-<p><a title="川普就职典礼 新唐人特别直播；同声翻译 专业解析；黄金时代将开启？ #新唐人电视台 ｜#新唐人直播 中文口译 1/20/2025" width="640" b="480" src=""></a><a href="https://dlvlk7o3qgp9v.cloudfront.net/J1vxKD4Jg"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/sImm5x_gnis?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></a></p>
+<p><a title="川普就职典礼 新唐人特别直播；同声翻译 专业解析；黄金时代将开启？ #新唐人电视台 ｜#新唐人直播 中文口译 1/20/2025" width="640" b="480" src=""></a><a href="https://doqmgyop4u892.cloudfront.net/E9hxKD4Jx"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/sImm5x_gnis?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></a></p>
 <h2>以下是川普就职典礼的更新：</h2>
 <h2>川普宣誓就职</h2>
 <p>川普正式宣誓<span class="HwtZe" lang="zh-TW"><span class="jCAhz ChMk0b"><span class="ryNqvb">就任美国第47任总统。</span></span></span></p>
@@ -108,13 +108,14 @@
 <p>（本文参考了CNN的报导。）</p>
 <p>责任编辑：林妍#</p>
 	
+
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/15/n14414310.md#1">川普就职典礼在即 七大要点一文看懂</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418165.md#1">组图：哪些政要名流出席川普就职典礼</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418111.md#1">川普就职后将发行政令 结束政府中DEI计划</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418128.md#1">川普就职后拟签移民行政令 终止出生公民权</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418135.md#1">川普就职午宴菜单有哪些精致美食和美酒</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2022/05/01/a103414939.md#1" target="_blank">加拿大20市镇升旗亮灯 祝贺法轮大法传世30年</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/4/24/n11208799.md#1" target="_blank">【征文】张东园：中国国学大师的血泪遭遇（5）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/12/8/9/n3655381.md#1" target="_blank">揭秘：中共诬陷法轮功是这样编出来的</a></li><hr>
+<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/07/20/a102898210.md#1" target="_blank">美国务卿：中共迫害法轮功21年 必须停止</a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/28/n10813474.md#1" target="_blank">大饥荒是中共有计划的屠杀手段（上）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/8/n11242880.md#1" target="_blank">美加政要褒奖法轮大法 宣布大法日大法月</a></li><hr>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/3/n14405103.md#1">稀奇古怪的转生故事二则：人未死魂已转生猪 死后变猪又回到人身</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/16/n14414547.md#1">前美军特种兵曝曾在地下设施见过外星科技</a></li>
