--- a/gb/25/1/19/n14416866.md
+++ b/gb/25/1/19/n14416866.md
@@ -2,21 +2,23 @@
 <table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【更新】川普宣誓就职 成美国第47任总统</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2025/01/id14418190-AFP__20250120__36UW2FB__v2__Preview__TopshotUsPoliticsTrumpInauguration-600x400.jpg" />///image2=```diff
-- 2025年1月20日，川普宣誓就职美国第47任总统。(Photo by SAUL LOEB / POOL / AFP)
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2025/01/id14418192-AFP__20250120__36UW2FR__v1__Preview__UsPoliticsTrumpInauguration-600x400.jpg" />///image2=```diff
+- 2025年1月20日，在美国国会大厦举行的总统就职仪式上，川普宣誓就职美国第47任总统。(Photo by SAUL LOEB / POOL / AFP)
 ```
-<h6>2025年1月20日，川普宣誓就职美国第47任总统。(Photo by SAUL LOEB / POOL / AFP)
+<h6>2025年1月20日，在美国国会大厦举行的总统就职仪式上，川普宣誓就职美国第47任总统。(Photo by SAUL LOEB / POOL / AFP)
 </h6>
 <hr>
-	<p>【大纪元2025年01月19日讯】（大纪元记者李言、张婷、林燕综合报导）第47任美国总统唐纳德?川普（特朗普）于周一（1月20日）举行就职典礼。据悉，川普在演讲中将强调，他将“成为所有美国人民的总统”。</p>
+	<p>【大纪元2025年01月19日讯】（大纪元记者李言、张婷、林燕综合报导）第47任美国总统唐纳德?川普（特朗普）于周一（1月20日）举行就职典礼。川普在演讲中将强调，他将“成为所有美国人民的总统”。</p>
 <p>川普将与美国副总统当选人JD?万斯宣誓就职，开始为期四年的共和党政府执政期。这也标志着川普作为美国总统的第二届任期正式开启。他第一次就职总统是2017年。</p>
 <p>总统就职标志着前后两届联邦政府权力的正式交接，根据《美国宪法第二十条修正案》规定，总统四年任期于1月20日中午结束，候任总统随后宣誓就职。</p>
-<p>川普的就职典礼预计将于美国东部时间周一上午11:30左右开始，为川普在中午12点宣誓就职做准备，届时他将正式成为总统。</p>
 <p>川普誓言推动具变革性的“美国优先”政策，他的施政方向将牵动全球政治和经济格局。周一的重点集中在总统就职演讲，以及上任首日签署的行政令上。</p>
 <p>周日（1月19日），川普表示，作为总统，他将在本周末首次出访，前往加州视察洛杉矶山火灾造成的损失。</p>
 <p>“我想向所有受加州山火影响的人表达我们的关怀。”川普说，“我将于周五去那里看一看，让它恢复正常。”</p>
-<p><a title="川普就职典礼 新唐人特别直播；同声翻译 专业解析；黄金时代将开启？ #新唐人电视台 ｜#新唐人直播 中文口译 1/20/2025" width="640" b="480" src=""></a><a href="https://doqmgyop4u892.cloudfront.net/E9hxKD4Jx"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/sImm5x_gnis?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></a></p>
+<p><a title="川普就职典礼 新唐人特别直播；同声翻译 专业解析；黄金时代将开启？ #新唐人电视台 ｜#新唐人直播 中文口译 1/20/2025" width="640" b="480" src=""></a><a href="https://d1vp4chj90rvdj.cloudfront.net/E4pxKD4Jq"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/sImm5x_gnis?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></a></p>
 <h2>以下是川普就职典礼的更新：</h2>
+<h2>川普：美国的黄金时代即将开始</h2>
+<p>美国新任总统唐纳德·川普周一宣誓就职美国第47任总统，他表示要“把美国放在首位”，并为美国开启新篇章。</p>
+<p>川普在就职演说中表示：“美国黄金时代现在开启。”</p>
 <h2>川普宣誓就职</h2>
 <p>川普正式宣誓<span class="HwtZe" lang="zh-TW"><span class="jCAhz ChMk0b"><span class="ryNqvb">就任美国第47任总统。</span></span></span></p>
 <p>最高法院首席大法官约翰·罗伯茨（John Roberts）主持川普的宣誓仪式。</p>
@@ -108,14 +110,13 @@
 <p>（本文参考了CNN的报导。）</p>
 <p>责任编辑：林妍#</p>
 	
-
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/15/n14414310.md#1">川普就职典礼在即 七大要点一文看懂</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418165.md#1">组图：哪些政要名流出席川普就职典礼</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418111.md#1">川普就职后将发行政令 结束政府中DEI计划</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418128.md#1">川普就职后拟签移民行政令 终止出生公民权</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418135.md#1">川普就职午宴菜单有哪些精致美食和美酒</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/07/20/a102898210.md#1" target="_blank">美国务卿：中共迫害法轮功21年 必须停止</a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/28/n10813474.md#1" target="_blank">大饥荒是中共有计划的屠杀手段（上）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/8/n11242880.md#1" target="_blank">美加政要褒奖法轮大法 宣布大法日大法月</a></li><hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/12/26/n11747470.md#1" target="_blank">为中共效力的红色特工 后来怎么样了（2）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/3/15/n11115255.md#1" target="_blank">美国人权报告 中国章节一值得关注的进展</a></li><hr>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/3/n14405103.md#1">稀奇古怪的转生故事二则：人未死魂已转生猪 死后变猪又回到人身</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/16/n14414547.md#1">前美军特种兵曝曾在地下设施见过外星科技</a></li>
