--- a/gb/25/1/19/n14416866.md
+++ b/gb/25/1/19/n14416866.md
@@ -14,7 +14,7 @@
 <p>川普誓言推动具变革性的“美国优先”政策，他的施政方向将牵动全球政治和经济格局。周一的重点集中在总统就职演讲，以及上任首日签署的行政令上。</p>
 <p>周日（1月19日），川普表示，作为总统，他将在本周末首次出访，前往加州视察洛杉矶山火灾造成的损失。</p>
 <p>“我想向所有受加州山火影响的人表达我们的关怀。”川普说，“我将于周五去那里看一看，让它恢复正常。”</p>
-<p><a title="川普就职典礼 新唐人特别直播；同声翻译 专业解析；黄金时代将开启？ #新唐人电视台 ｜#新唐人直播 中文口译 1/20/2025" width="640" b="480" src=""></a><a href="https://ddtx9y1vir8bp.cloudfront.net/M0sxKD4Jk"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/sImm5x_gnis?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></a></p>
+<p><a title="川普就职典礼 新唐人特别直播；同声翻译 专业解析；黄金时代将开启？ #新唐人电视台 ｜#新唐人直播 中文口译 1/20/2025" width="640" b="480" src=""></a><a href="https://d2zq9v5psazuww.cloudfront.net/C0kxKD4Ja"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/sImm5x_gnis?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></a></p>
 <h2>以下是川普就职典礼的更新：</h2>
 <h2>川普称就职日为“自由日”</h2>
 <p>川普总统在演讲中表示，今天，即2025年1月20日是“自由日（liberation day）”。</p>
@@ -139,7 +139,7 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418165.md#1">组图：哪些政要名流出席川普就职典礼</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418111.md#1">川普就职后将发行政令 结束政府中DEI计划</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/3/23/n11134725.md#1" target="_blank">共产暴政录：东南亚排华的重要根源是共产党</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/10/7/20/n2971015.md#1" target="_blank">田璐：让正义和希望之声长鸣于全人类的上空</a></li><hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/10/7/14/n2965989.md#1" target="_blank">鲜为人知的马克思之三：虚荣的马克思</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/28/n11285391.md#1" target="_blank">没有题海和补课 女儿考上名牌大学</a></li><hr>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/3/n14405103.md#1">稀奇古怪的转生故事二则：人未死魂已转生猪 死后变猪又回到人身</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/16/n14414547.md#1">前美军特种兵曝曾在地下设施见过外星科技</a></li>
